[gd_scene load_steps=14 format=3 uid="uid://cwpwpaxai4ywp"]

[ext_resource type="Script" path="res://GenerateTexture.gd" id="1_vfh1h"]
[ext_resource type="Shader" path="res://Green.gdshader" id="2_7jtbv"]
[ext_resource type="Texture2D" uid="uid://bdlfyexyauk5e" path="res://icon.png" id="2_xecim"]
[ext_resource type="Shader" path="res://Red.gdshader" id="3_u8lr0"]
[ext_resource type="Shader" path="res://Blue.gdshader" id="4_rpxtv"]
[ext_resource type="Shader" path="res://Fire.gdshader" id="5_ujc5s"]

[sub_resource type="OpenSimplexNoise" id="OpenSimplexNoise_byt4g"]
period = 59.1
persistence = 0.555
lacunarity = 0.1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_baxb2"]
shader = ExtResource( "2_7jtbv" )

[sub_resource type="ShaderMaterial" id="ShaderMaterial_o2l6a"]
shader = ExtResource( "3_u8lr0" )

[sub_resource type="ShaderMaterial" id="ShaderMaterial_r8h1w"]
shader = ExtResource( "4_rpxtv" )

[sub_resource type="Gradient" id="Gradient_sakdx"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_f85jh"]
gradient = SubResource( "Gradient_sakdx" )

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3dfrb"]
shader = ExtResource( "5_ujc5s" )
shader_param/speed = null
shader_param/color = Color(1, 1, 1, 1)
shader_param/gradient = SubResource( "GradientTexture2D_f85jh" )

[node name="GenerateTexture" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="PanelContainer" parent="Center"]
offset_left = 26.0
offset_top = 21.0
offset_right = 474.0
offset_bottom = 738.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="Center/Panel"]
offset_right = 448.0
offset_bottom = 717.0
theme_override_constants/margin_right = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_left = 16
theme_override_constants/margin_bottom = 16
script = ExtResource( "1_vfh1h" )
_noise = SubResource( "OpenSimplexNoise_byt4g" )

[node name="VBox" type="VBoxContainer" parent="Center/Panel/Margin"]
offset_left = 16.0
offset_top = 16.0
offset_right = 432.0
offset_bottom = 701.0
theme_override_constants/separation = 16

[node name="Top" type="HBoxContainer" parent="Center/Panel/Margin/VBox"]
offset_right = 416.0
offset_bottom = 128.0
alignment = 1

[node name="Panel" type="PanelContainer" parent="Center/Panel/Margin/VBox/Top"]
offset_left = 144.0
offset_right = 272.0
offset_bottom = 128.0

[node name="Green" type="TextureRect" parent="Center/Panel/Margin/VBox/Top/Panel"]
material = SubResource( "ShaderMaterial_baxb2" )
offset_right = 128.0
offset_bottom = 128.0
rect_min_size = Vector2(128, 128)

[node name="Middle" type="HBoxContainer" parent="Center/Panel/Margin/VBox"]
offset_top = 144.0
offset_right = 416.0
offset_bottom = 272.0
theme_override_constants/separation = 16
alignment = 1

[node name="Panel1" type="PanelContainer" parent="Center/Panel/Margin/VBox/Middle"]
offset_right = 128.0
offset_bottom = 128.0

[node name="Red" type="TextureRect" parent="Center/Panel/Margin/VBox/Middle/Panel1"]
material = SubResource( "ShaderMaterial_o2l6a" )
offset_right = 128.0
offset_bottom = 128.0
rect_min_size = Vector2(128, 128)

[node name="Panel2" type="PanelContainer" parent="Center/Panel/Margin/VBox/Middle"]
offset_left = 144.0
offset_right = 272.0
offset_bottom = 128.0

[node name="Texture" type="TextureRect" parent="Center/Panel/Margin/VBox/Middle/Panel2"]
offset_right = 128.0
offset_bottom = 128.0
rect_min_size = Vector2(128, 128)

[node name="Panel3" type="PanelContainer" parent="Center/Panel/Margin/VBox/Middle"]
offset_left = 288.0
offset_right = 416.0
offset_bottom = 128.0

[node name="Blue" type="TextureRect" parent="Center/Panel/Margin/VBox/Middle/Panel3"]
material = SubResource( "ShaderMaterial_r8h1w" )
offset_right = 128.0
offset_bottom = 128.0
rect_min_size = Vector2(128, 128)

[node name="Bottom" type="HBoxContainer" parent="Center/Panel/Margin/VBox"]
offset_top = 288.0
offset_right = 416.0
offset_bottom = 416.0
theme_override_constants/separation = 16
alignment = 1

[node name="Panel" type="PanelContainer" parent="Center/Panel/Margin/VBox/Bottom"]
offset_left = 144.0
offset_right = 272.0
offset_bottom = 128.0

[node name="Preview" type="TextureRect" parent="Center/Panel/Margin/VBox/Bottom/Panel"]
material = SubResource( "ShaderMaterial_3dfrb" )
offset_right = 128.0
offset_bottom = 128.0
rect_min_size = Vector2(128, 128)
texture = ExtResource( "2_xecim" )

[node name="Settings" type="VBoxContainer" parent="Center/Panel/Margin/VBox"]
offset_top = 432.0
offset_right = 416.0
offset_bottom = 638.0
alignment = 1

[node name="Color" type="HBoxContainer" parent="Center/Panel/Margin/VBox/Settings"]
offset_right = 416.0
offset_bottom = 31.0
theme_override_constants/separation = 16
alignment = 1

[node name="Label" type="Label" parent="Center/Panel/Margin/VBox/Settings/Color"]
offset_left = 42.0
offset_top = 2.0
offset_right = 142.0
offset_bottom = 28.0
rect_min_size = Vector2(100, 0)
text = "Color"
horizontal_alignment = 2
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="Center/Panel/Margin/VBox/Settings/Color"]
offset_left = 158.0
offset_right = 258.0
offset_bottom = 31.0
rect_min_size = Vector2(100, 0)

[node name="ColorPicker" type="ColorPickerButton" parent="Center/Panel/Margin/VBox/Settings/Color"]
offset_left = 274.0
offset_right = 374.0
offset_bottom = 31.0
rect_min_size = Vector2(100, 0)

[node name="Seed" type="HBoxContainer" parent="Center/Panel/Margin/VBox/Settings"]
offset_top = 35.0
offset_right = 416.0
offset_bottom = 66.0
theme_override_constants/separation = 16
alignment = 1

[node name="Label" type="Label" parent="Center/Panel/Margin/VBox/Settings/Seed"]
offset_left = 42.0
offset_top = 2.0
offset_right = 142.0
offset_bottom = 28.0
rect_min_size = Vector2(100, 0)
text = "Seed"
horizontal_alignment = 2
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="Center/Panel/Margin/VBox/Settings/Seed"]
offset_left = 158.0
offset_right = 258.0
offset_bottom = 31.0
rect_min_size = Vector2(100, 0)

[node name="HSlider" type="HSlider" parent="Center/Panel/Margin/VBox/Settings/Seed"]
offset_left = 274.0
offset_right = 374.0
offset_bottom = 31.0
rect_min_size = Vector2(100, 0)
size_flags_vertical = 1
max_value = 2e+08

[node name="Octaves" type="HBoxContainer" parent="Center/Panel/Margin/VBox/Settings"]
offset_top = 70.0
offset_right = 416.0
offset_bottom = 101.0
theme_override_constants/separation = 16
alignment = 1

[node name="Label" type="Label" parent="Center/Panel/Margin/VBox/Settings/Octaves"]
offset_left = 42.0
offset_top = 2.0
offset_right = 142.0
offset_bottom = 28.0
rect_min_size = Vector2(100, 0)
text = "Octaves"
horizontal_alignment = 2
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="Center/Panel/Margin/VBox/Settings/Octaves"]
offset_left = 158.0
offset_right = 258.0
offset_bottom = 31.0
rect_min_size = Vector2(100, 0)

[node name="HSlider" type="HSlider" parent="Center/Panel/Margin/VBox/Settings/Octaves"]
offset_left = 274.0
offset_right = 374.0
offset_bottom = 31.0
rect_min_size = Vector2(100, 0)
size_flags_vertical = 1
min_value = 1.0
max_value = 9.0
value = 1.0

[node name="Period" type="HBoxContainer" parent="Center/Panel/Margin/VBox/Settings"]
offset_top = 105.0
offset_right = 416.0
offset_bottom = 136.0
theme_override_constants/separation = 16
alignment = 1

[node name="Label" type="Label" parent="Center/Panel/Margin/VBox/Settings/Period"]
offset_left = 42.0
offset_top = 2.0
offset_right = 142.0
offset_bottom = 28.0
rect_min_size = Vector2(100, 0)
text = "Period"
horizontal_alignment = 2
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="Center/Panel/Margin/VBox/Settings/Period"]
offset_left = 158.0
offset_right = 258.0
offset_bottom = 31.0
rect_min_size = Vector2(100, 0)

[node name="HSlider" type="HSlider" parent="Center/Panel/Margin/VBox/Settings/Period"]
offset_left = 274.0
offset_right = 374.0
offset_bottom = 31.0
rect_min_size = Vector2(100, 0)
size_flags_vertical = 1
min_value = 0.1
max_value = 256.0
step = 0.1
value = 0.1

[node name="Persistence" type="HBoxContainer" parent="Center/Panel/Margin/VBox/Settings"]
offset_top = 140.0
offset_right = 416.0
offset_bottom = 171.0
theme_override_constants/separation = 16
alignment = 1

[node name="Label" type="Label" parent="Center/Panel/Margin/VBox/Settings/Persistence"]
offset_left = 42.0
offset_top = 2.0
offset_right = 142.0
offset_bottom = 28.0
rect_min_size = Vector2(100, 0)
text = "Persistance"
horizontal_alignment = 2
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="Center/Panel/Margin/VBox/Settings/Persistence"]
offset_left = 158.0
offset_right = 258.0
offset_bottom = 31.0
rect_min_size = Vector2(100, 0)

[node name="HSlider" type="HSlider" parent="Center/Panel/Margin/VBox/Settings/Persistence"]
offset_left = 274.0
offset_right = 374.0
offset_bottom = 31.0
rect_min_size = Vector2(100, 0)
size_flags_vertical = 1
max_value = 1.0
step = 0.01

[node name="Lacunarity" type="HBoxContainer" parent="Center/Panel/Margin/VBox/Settings"]
offset_top = 175.0
offset_right = 416.0
offset_bottom = 206.0
theme_override_constants/separation = 16
alignment = 1

[node name="Label" type="Label" parent="Center/Panel/Margin/VBox/Settings/Lacunarity"]
offset_left = 42.0
offset_top = 2.0
offset_right = 142.0
offset_bottom = 28.0
rect_min_size = Vector2(100, 0)
text = "Lacunarity"
horizontal_alignment = 2
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="Center/Panel/Margin/VBox/Settings/Lacunarity"]
offset_left = 158.0
offset_right = 258.0
offset_bottom = 31.0
rect_min_size = Vector2(100, 0)

[node name="HSlider" type="HSlider" parent="Center/Panel/Margin/VBox/Settings/Lacunarity"]
offset_left = 274.0
offset_right = 374.0
offset_bottom = 31.0
rect_min_size = Vector2(100, 0)
size_flags_vertical = 1
min_value = 0.1
max_value = 4.0
step = 0.1
value = 0.1

[node name="Buttons" type="HBoxContainer" parent="Center/Panel/Margin/VBox"]
offset_top = 654.0
offset_right = 416.0
offset_bottom = 685.0
theme_override_constants/separation = 16
alignment = 1

[node name="Generate" type="Button" parent="Center/Panel/Margin/VBox/Buttons"]
offset_left = 105.0
offset_right = 184.0
offset_bottom = 31.0
text = "Generate"

[node name="Reset" type="Button" parent="Center/Panel/Margin/VBox/Buttons"]
offset_left = 200.0
offset_right = 250.0
offset_bottom = 31.0
text = "Reset
"

[node name="Save" type="Button" parent="Center/Panel/Margin/VBox/Buttons"]
offset_left = 266.0
offset_right = 310.0
offset_bottom = 31.0
text = "Save"
